# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
gendiff/: cli.py  generate_diff.py  parser.py
gendiff/format/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: demo.cast  json_result.txt
